--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>Avi</title>
+	<title>PWA</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,8 +12,12 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon.png">
 	<link rel="manifest" href="/manifest.json">
 
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="stylesheet" href="/css/material-design-iconic-font.css">
+
+	<script src="https://kit.fontawesome.com/ab7abba85e.js" crossorigin="anonymous"></script>
+
+	<script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
+	<link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+
 
 </head>
 <body>
