--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000"/>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon.png">
-	<link rel="manifest" href="/manifest.json">
+	<link rel="manifest" crossorigin="use-credentials" href="manifest.json">
 
 
 	<script src="https://kit.fontawesome.com/ab7abba85e.js" crossorigin="anonymous"></script>
