--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#000000"/>
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/icon/apple-touch-icon.png">
 	<link rel="manifest" crossorigin="use-credentials" href="manifest.json">
 
 
@@ -23,7 +23,7 @@
 <body>
 	<meta charset="utf-8">
     <script src="sw.js" type="text/javascript"></script>
-    <script type="module" src="/static/app-root.js"></script>
+    <script type="module" src="static/app-root.js"></script>
     <noscript>Javascript is required to run this page!</noscript>
 </body>
 </html>
